package controller;

// Manages peer connections using TcpServer (host) or TcpClient (connect)
public class PeerService {

    private ConnectionHandler connection;
    private final TcpServer server;
    private final TcpClient client;
    private final CallService callService;
    private String currentCallPeer;

    public PeerService() {
        server = new TcpServer();
        client = new TcpClient();
        callService = new CallService();
    }

    // Start listening for one incoming peer connection (Host mode)
    public void connectToNetwork(int port, ConnectionHandler.ConnectListener listener) {
        server.listen(port, listener);
    }

    // Connect outbound to a peer at ip:port (Connect mode)
    public void connectToPeer(String ip, int port, ConnectionHandler.ConnectListener listener) {
        client.connect(ip, port, listener);
    }

    public void setConnection(ConnectionHandler handler) {
        this.connection = handler;
    }

    public void sendMessage(String message) {
        if (connection != null) {
            connection.send(message);
        }
    }

    public void disconnectFromNetwork() {
        server.stop();
        if (connection != null) {
            connection.close();
            connection = null;
        }
    }

    public void startCall(String peerId) {
        currentCallPeer = peerId;
        if (connection != null) {
            connection.send("CALL_REQUEST:" + peerId);
        }
        callService.connect(peerId);
    }

    public void endCall() {
        if (currentCallPeer != null) {
            if (connection != null) {
                connection.send("CALL_END:" + currentCallPeer);
            }
            callService.disconnect(currentCallPeer);
            currentCallPeer = null;
        }
    }
}
