@startuml

class TcpClient {
  + connect(ip, port, listener)
}

class TcpServer {
  + listen(port, listener)
}

class PeerClient {
  - peerId: String
  - publicKey: String
  - username: String
  - status: String
  + setStatus(status)
}

class PeerService {
  + connectToNetwork(publicKey)
  + disconnectFromNetwork()
  + sendMessage(peerId, message)
  + receiveMessage()
  + startCall(peerId)
  + endCall()
}

class ManagerService {
  + generatePeer()
  + validatePeer()
  + getActivePeers()
  + getActiveCalls()
  + requestTranscript(peerId)
  + requestCallLogs(peerId)
}

class ChallengeService {
  + authenticateAsHost(handler, profile, localUsername, logger)
  + authenticateAsClient(handler, profile, localUsername, logger)
  + shortId(publicKey)
}

class KeyManager {
  + generaterProfile(username)
}

class ConnectionHandler {
  + send(message)
  + socket()
}

class Message {
  - messageId: String
  - senderId: String
  - receiverId: String
  - timestamp: Date
  - content: String
}

class CallRecord {
  - callId: String
  - senderId: String
  - receiverId: String
  - startTime: Date
  - endTime: Date
}

class TranscriptService {
  + getCallRecords(peerId)
  + getMessages(peerId)
}

class ChatService {
  + connect(peerId)
  + disconnect(peerId)
  + sendMessage(peerId, message)
  + receiveMessage(peerId, message)
}

class CallService {
  + connect(peerId)
  + disconnect(peerId)
  + sendAudio()
  + receiveAudio()
}

class TranscriptStore {
  - messages: List
  - callRecords: List
}

' Inheritance
ManagerService --|> PeerService
ManagerService --|> TcpServer

' Client-Service relationships
PeerClient --> PeerService
PeerClient --|> TcpClient

' Peer communication
PeerService --> ChatService
PeerService --> CallService
PeerService --> Message
PeerService --> ChallengeService : uses
PeerService --> ConnectionHandler : has

ChatService --> Message
CallService --> CallRecord : generates

ChallengeService --> KeyManager : uses

' Transcript storage
ChatService --> TranscriptStore : stores
CallService --> TranscriptStore : stores

TranscriptService --> TranscriptStore
TranscriptStore "1" *-- "*" Message
TranscriptStore "1" *-- "*" CallRecord

' Manager monitoring
ManagerService --> ChallengeService : uses
ManagerService --> TranscriptService : fetches
ManagerService ..> PeerClient : monitors

@enduml